Not working version 2

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,7 @@ license = MIT
 python_requires = >=3.10
 packages = find:
 include_package_data = True
-install_requires =
--r requirements.txt
+install_requires = file: requirements.txt
 
 [options.package_data]
 
