--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ install_requires = file: requirements.txt
 
 [options.package_data]
 
-= *.csv, *.json, *.yaml
+* = *.csv, *.json, *.yaml
 
 [mypy]
 python_version = 3.10
