--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,12 @@
   "name": "Python 3",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+  "containerEnv": {
+    "NUTREASE_DB_PATH": "/workspace/Nutrease/.db/nutrease_db.json"
+  },
+  "mounts": [
+    "source=nutrease-db,target=/workspace/Nutrease/.db,type=volume"
+  ],
   "customizations": {
     "codespaces": {
       "openFiles": [
