--- a/nutrease_db.json
+++ b/nutrease_db.json
@@ -24,7 +24,7 @@
       "email": "eliasampaolesi@gmail.com",
       "name": "Elia",
       "surname": "Sampaolesi",
-      "password": "EliaSampaolesi3",
+      "password": "Eliasampaolesi3",
       "alarms": [
         {
           "hour": 21,
