--- a/nutrease_db.json
+++ b/nutrease_db.json
@@ -57,7 +57,7 @@
   "MealRecord": {
     "1": {
       "id": 1,
-      "created_at": "2025-09-16T08:00:00+02:00",
+      "created_at": "2025-09-19T08:00:00+02:00",
       "note": null,
       "record_type": "MEAL",
       "patient_email": "pc@test.com",
@@ -188,6 +188,27 @@
     "7": {
       "id": 7,
       "created_at": "2025-09-16T23:10:44.161668+02:00",
+      "note": null,
+      "record_type": "MEAL",
+      "patient_email": "pc@test.com",
+      "portions": [
+        {
+          "food_name": "Mela",
+          "quantity": 2,
+          "unit": "ITEM",
+          "nutrients": [
+            {
+              "nutrient": "SORBITOL",
+              "grams": 1.6
+            }
+          ]
+        }
+      ],
+      "__type__": "MealRecord"
+    },
+    "8": {
+      "id": 8,
+      "created_at": "2025-09-19T23:43:35.274686+02:00",
       "note": null,
       "record_type": "MEAL",
       "patient_email": "pc@test.com",
